k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: memesapp
spec:
  selector:
    app: app
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
